--- a/index.html
+++ b/index.html
@@ -10,13 +10,27 @@
   </head>
 
   <body >  
-<!-- ********************* -->
-<!-- Barre de menu Horizontal -->
-<!-- ********************* -->
-    <nav class="top-bar">
+
+
+
+<!-- ************************** -->
+<!--  Barre de menu responsive  -->
+<!-- ************************** -->
+
+<div class="title-bar" data-responsive-toggle="menu-principal" data-hide-for="medium">
+  <button class="menu-icon" type="button" data-toggle></button>
+  <div class="title-bar-title">Apprendre DEV</div>
+</div>
+
+
+<!-- ************************** -->
+<!--  Barre de menu Horizontal  -->
+<!-- ************************** -->
+
+    <nav id="menu-principal" class="top-bar">
       <div  class="row column"> 
-       <ul  class="dropdown menu" data-dropdown-menu>
-         <li class="menu-text">Apprendre DEV</li>
+       <ul  class="dropdown menu vertical medium-horizontal" data-responsive-menu="accordion medium-dropdown">
+         <li class="menu-text hide-for-small-only">Apprendre DEV</li>
          <li >  <a href="index.html">Accueil</a> </li>
          <li>  <a href="#" >Language </a>
             <ul class="menu vertical">
