--- a/index.html
+++ b/index.html
@@ -177,7 +177,76 @@
               <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
             </nav>
           </div>
-         
+          <div class="row">
+
+            <div class="small-12 medium-6 large-4 columns">
+              <div class="thumbnail">
+                <img src="img/programmation-logo_thumbnail.png" alt="programmation">
+                <div>
+                  <h3>Programmer</h3>
+                  <p>Découvrez la joie de la programmation du php au java en passant par le C.</p>
+                  <p class="text-right"> <a class="small button" href="#" role="button">Détail</a> </p>
+
+                </div>
+              </div>  
+            </div>
+
+            <div class="small-12 medium-6 large-4 columns">
+              <div class="thumbnail">
+                <img src="img/frameworkphp-logo_thumbnail.png" alt="framework php">
+                <div>
+                  <h3>Framework PHP</h3>
+                  <p>Vous voulez développer efficacement avec PHP, utiliser un Framework</p>
+                  <p class="text-right"><a class="small button" href="#"role="button">Détail</a> </p>
+                </div>
+              </div>  
+            </div>
+
+            <div class="small-12 medium-6 large-4 columns">
+              <div class="thumbnail">
+                <img src="img/frameworkjs-logo_thumbnail.png" alt="Framework javascript">
+                <div>
+                  <h3>Framework JS</h3>
+                  <p>Technologie du moment! Apprendre un Framewok JS est indisponsable</p>
+                  <p class="text-right"><a class="small button"  href="#" role="button">Détail</a> </p>
+                </div>
+              </div>  
+            </div>
+
+            <div class="small-12 medium-6 large-4 columns">
+              <div class="thumbnail">
+                <img src="img/erp-logo_thumbnail.png" alt="ERP">
+                <div>
+                  <h3>ERP</h3>
+                  <p>Vos applications de gestion d'entreprise. De la gestion de caisse au RH</p>
+                  <p class="text-right"><a href="#" class="small button" role="button">Détail</a> </p>
+                </div>
+              </div>  
+            </div>
+
+            <div class="small-12 medium-6 large-4 columns">
+              <div class="thumbnail">
+                <img src="img/cms-logo_thumbnail.png" alt="Sytème de gestion de contenu">
+                <div>
+                  <h3>CMS</h3>
+                  <p>Créer un site web en trois click, il suffit d'utiliser un CMS</p>
+                  <p class="text-right"><a href="#" class="small button" role="button">Détail</a> </p>
+                </div>
+              </div>  
+            </div>
+
+            <div class="small-12 medium-6 large-4 columns">
+              <div class="thumbnail">
+                <img src="img/logiciel-logo_thumbnail.png" alt="Logiciel de développement">
+                <div>
+                  <h3>Logiciel</h3>
+                  <p>Pour développer il faut des outils. Explorer vos logiciels préférés!</p>
+                  <p class="text-right"><a href="#" class="small button" role="button">Détail</a> </p>
+                </div>
+              </div>
+            </div>
+
+          </div>  
         </div>
       </div>
     </div>   
