vid-08 Foundation 6 : How to create Panel

--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
           <!-- ************************** -->
         <div class="off-canvas-content" data-off-canvas-content>
             <!-- Page content -->
+
+            <!-- *********************  -->
+      <!--        Carrousel     -->
+      <!-- *********************  -->
+
           <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-timer-delay="3000" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
 
             <ul class="orbit-container">
@@ -177,6 +182,10 @@
                 <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
             </nav>
           </div>
+
+          <!-- ********************* -->
+      <!--    contenu      -->
+      <!-- ********************* -->
           <div class="row">
 
               <div class="small-12 medium-6 large-4 columns">
@@ -247,6 +256,60 @@
               </div>
 
           </div>
+
+          <div class="row">
+            <ul class="accordion" data-accordion>
+              <li class="accordion-item is-active" data-accordion-item>
+                  <h1 class="accordion-title">Quoi de 9 <span class="success badge">3</span></h1>
+                  <div class="accordion-content" data-tab-content>
+                      <div class="media-object">
+                          <div class="media-object-section">
+                                <div class="thumbnail">
+                                  <a href="#">
+                                    <img  src="img/cms-logo_panel.png" alt="news cms">
+                                  </a>
+                                </div>
+                          </div>      
+                          <div class="media-object-section">
+                            <h4>Drupal Theming</h4>
+                            <span class="success label">Nouveau</span>
+                            <p>Une nouvelle sur le theming de Drupal 8. Nous allons créer un simple template, ensuite nous allons les ajouter dans le dossier theme.... <a href="#">Plus</a></p>
+                          </div>
+                      </div>
+                      <div class="media-object">
+                          <div class="media-object-section">
+                              <div class="thumbnail">
+                                <a href="#">
+                                  <img src="img/programmation-logo_panel.png" alt="apprendre php">
+                                </a>
+                              </div>
+                          </div>  
+                          <div class="media-object-section">
+                            <h4 >Nouvelle formation de PHP</h4>
+                            <p>Dans la partie de cette formation nous allons apprendre comment manipuler les tableaux. Ensuite on va passer à la programmation orienté objet de php...<a href="#">Plus</a></p>
+                          </div>
+                      </div>
+                      <div class="media-object">
+                          <div class="media-object-section">
+                              <div class="thumbnail">
+                                <a href="#">
+                                  <img src="img/erp-logo_panel.png" alt="apprendre erp">
+                                </a>
+                              </div>
+                          </div>  
+                          <div class="media-object-section">
+                            <h4 >Odoo</h4>
+                            <p>Un nouveau tutoriel sur odoo, la dernière fois nous avons vu comment l'insttalé sur Debian 8, cette fois-ci nous allons apprendre l'installation sur Ubuntu server 14.04.... <a href="#">Plus</a></p>
+                          </div>
+                      </div>
+                  </div>
+              </li>     
+            </ul>     
+            </div> 
+
+          <!-- ********************* -->
+          <!--    footer         -->
+          <!-- ********************* -->
 
           <footer>
             <div class="row small-up-2 medium-up-3 large-up-6">
