vid-09 Foundation 6 : Create a simple Page web

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
           </div>
 
+            <!-- ************************** -->
+            <!--  Barre de menu Latéral  -->
+            <!-- ************************** -->
           <nav  class="off-canvas position-left" id="menu-principal-responsive" data-off-canvas >
                       <!-- Close button -->
             <button class="close-button" aria-label="Close menu" type="button" data-close>
